<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartAds</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_view_details_activity">Details</string>
    <string name="action_share">Share</string>
    <string name="header_ads_list">Received Ads</string>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_list_featured_ads">Featured ads</string>
    <string name="fragment_list_received_ads">Your ads</string>
    <string name="error_login_incorrect">Wrong email or password</string>
    <string name="error_network_problem">Sorry, unable to connect to SmartAds Server.\nPlease check your network connection or try again later.</string>
    <string name="ok">OK</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="btn_next">Next</string>
    <string name="hint_signup_email">Your Loyalty Membership email</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_not_member_title">Not A Loyalty Member</string>
    <string name="error_not_member">This email is not belong to any Loyalty Member.\nPlease enter the email you registered with Loyalty Membership Program.\nIf you haven\'t registered Loyalty Membership Program, you must registerthis program at Supermarket before you can use this app. Thank you!</string>
    <string name="error_already_registed_title">Already Signed up</string>
    <string name="error_already_registed">This account is already signed up!</string>
    <string name="error_unkown">There is an unkown error! Please try again later</string>
    <string name="btn_finish">Finish</string>
    <string name="error_confirm_not_match">Passwords didn\'t match</string>
    <string name="signup_success">An email has been sent to you. Please click the link on it to complete the registration. Thank you!</string>
    <string name="success">Success!</string>
    <string name="smartads">SmartAds</string>
    <string name="login_have_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>


    <!-- !-->
    <string name="default_no_start_date">Available until %s</string>
    <string name="default_no_date">Available Now </string>
    <string name="from_date">From %s</string>
    <string name="to_date">to %s</string>

    <string name="just_received_section">Just Received</string>
    <string name="others_section">Others</string>
    <string name="expired_section">Expired</string>

    <string name="empty_ads">Your received ads will be displayed here</string>

    <string name="btn_confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="btn_feedback">Feedback</string>

    <string name="dlg_feedback_title">Feedback</string>
    <string name="dlg_feedback">Stop receiving promotions for this product</string>
    <string name="toast_remove">Promotions from this product will be removed</string>

    <string name="settings_condition_summary">Discount at least %1$d%% or %2$s</string>
    <string name="settings_pref_entrance_key">pref_entrance_condition</string>
    <string name="settings_pref_aisle_key">pref_aisle_condition</string>
    <string name="VND">VND</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dev_config">Dev Config</string>
    <string name="logout_message">You might not receive smart promotions/ads after you log out.</string>
    <string name="log_out_confirm_title">Log Out?</string>
    <string name="change_password">Change Password</string>
    <string name="cp_current_pass">Current Password</string>
    <string name="cp_new_pass">New Password</string>
    <string name="cp_confirm_new_pass">Confrm New Password</string>
    <string name="cp_change">Change</string>
    <string name="error_incorrect_current_pass">Incorrect current password</string>
    <string name="success_change_pass">Password Successfully Changed</string>
    <string name="ask_for_internet_title">SmartAds asked for Internet</string>
    <string name="ask_for_internet_text">Please enable Internet Connection.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="enable_internet_to_view_ads">Please turn on Internet Connection to view this ads. Thank you!</string>
    <string name="no_internet_feedback">No Internet Connection to feedback</string>
</resources>
