<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/form_horizontal_margin"
    android:paddingRight="@dimen/form_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vn.edu.hcmut.cse.smartads.activity.ChangePassActivity">

    <EditText
        android:id="@+id/cp_current_pass"
        style="@style/ChangePassInput"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/form_vertical_spacing"
        android:hint="@string/cp_current_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cp_new_pass"
        style="@style/ChangePassInput"
        android:layout_below="@+id/cp_current_pass"
        android:layout_centerHorizontal="true"
        android:hint="@string/cp_new_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cp_new_pass_confirm"
        style="@style/ChangePassInput"
        android:layout_below="@+id/cp_new_pass"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/cp_confirm_new_pass"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_change"
        android:id="@+id/cp_btn_change"
        android:layout_alignLeft="@id/cp_new_pass_confirm"
        android:layout_alignRight="@id/cp_new_pass_confirm"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/cp_new_pass_confirm"
        android:layout_centerHorizontal="true"
        style="@style/myButton" />
</RelativeLayout>
