<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/form_horizontal_margin"
    android:paddingRight="@dimen/form_horizontal_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="@integer/form_et_ems"
        android:id="@+id/signup_edit_password"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/form_vertical_spacing"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:ems="@integer/form_et_ems"
        android:id="@+id/signup_edit_confirm_password"
        android:layout_marginTop="@dimen/form_vertical_spacing"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signup_edit_password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish"
        android:id="@+id/btn_finish"
        android:layout_marginTop="@dimen/signup_btn_top_margin"
        android:layout_below="@+id/signup_edit_confirm_password"
        android:layout_alignLeft="@id/signup_edit_confirm_password"
        android:layout_alignRight="@id/signup_edit_confirm_password"
        android:layout_centerHorizontal="true"
        style="@style/myButton"/>
</RelativeLayout>